# monadoc

./: .devcontainer.json  .editorconfig  .gitignore  .hlint.yaml  README.markdown  cabal.project  compose.yaml  docker-compose.yaml  fly.toml  hie.yaml  monadoc.cabal  weeder.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yaml  hlint.sh  on-create.sh  ormolu.sh  post-start.sh  postCreate.sh  run.sh  watch.sh
.github/: hspec-problem-matcher.json
.github/workflows/: deploy.yaml  workflow.yaml
data/: bootstrap.css  hspec-problem-matcher.json  monadoc.css  monadoc.js
docker/: Dockerfile
docker/devcontainer/: Dockerfile  initialize.sh  on-create.sh
source/executable/: Main.hs
source/test-suite/: Main.hs
source/test-suite/Monadoc/: Spec.hs  Test.hs
source/test-suite/Monadoc/Action/Blob/: UpsertSpec.hs
source/test-suite/Monadoc/Action/Database/: InitializeSpec.hs
source/test-suite/Monadoc/Action/HackageUser/: UpsertSpec.hs
source/test-suite/Monadoc/Action/Job/: EnqueueSpec.hs
source/test-suite/Monadoc/Action/Key/: SelectLastInsertSpec.hs
source/test-suite/Monadoc/Action/Package/: UpsertSpec.hs
source/test-suite/Monadoc/Action/Preference/: UpsertSpec.hs
source/test-suite/Monadoc/Action/Upload/: UpsertSpec.hs
source/test-suite/Monadoc/Action/Version/: UpsertSpec.hs
source/test-suite/Monadoc/Extra/: DirectSqliteSpec.hs  TimeSpec.hs
source/test-suite/Monadoc/Model/: BlobSpec.hs  CronEntrySpec.hs  HackageIndexSpec.hs  HackageUserSpec.hs  JobSpec.hs  MigrationSpec.hs  PackageSpec.hs  PreferenceSpec.hs  UploadSpec.hs  VersionSpec.hs
source/test-suite/Monadoc/Type/: ConfigSpec.hs  ConstraintSpec.hs  FlagSpec.hs  GuidSpec.hs  HackageUserNameSpec.hs  HashSpec.hs  KeySpec.hs  PackageNameSpec.hs  PortSpec.hs  ReversionSpec.hs  RevisionSpec.hs  RouteSpec.hs  ScheduleSpec.hs  SeveritySpec.hs  StatusSpec.hs  TaskSpec.hs  TimestampSpec.hs  VersionNumberSpec.hs
