cabal-version:      2.2
name:               monadoc
version:            0.2023.4.12
build-type:         Simple
category:           Documentation
data-dir:           data
data-files:
  apple-touch-icon.png
  bootstrap.min.css
  favicon.ico
  monadoc.js

description:        Monadoc provides worse Haskell documentation.
extra-source-files: README.markdown
license-file:       LICENSE.txt
license:            MIT
maintainer:         Taylor Fausak
synopsis:           Worse Haskell documentation.

source-repository head
  location: https://github.com/tfausak/monadoc
  type:     git

flag pedantic
  default:     False
  description: Turns warnings into errors.
  manual:      True

common library
  build-depends:    base ^>=4.18.0
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missed-specialisations -Wno-missing-deriving-strategies
    -Wno-missing-export-lists -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import:        library
  build-depends: monadoc
  ghc-options:   -rtsopts -threaded

library
  import:             library
  autogen-modules:    Paths_monadoc
  build-depends:
    , aeson ^>=2.1.1
    , async ^>=2.2.4
    , bytestring ^>=0.11.3
    , Cabal-syntax ^>=3.10.1
    , case-insensitive ^>=1.2.1
    , containers ^>=0.6.6
    , cron ^>=0.7.0
    , cryptonite ^>=0.30
    , direct-sqlite ^>=2.3.27
    , directory ^>=1.3.7
    , exceptions ^>=0.10.5
    , filepath ^>=1.4.2
    , formatting ^>=7.2.0
    , haddock-library ^>=1.11.0
    , hashable ^>=1.4.1
    , hspec ^>=2.10.8
    , http-client ^>=0.7.13
    , http-client-tls ^>=0.3.6
    , http-types ^>=0.12.3
    , lucid2 ^>=0.0.20221012
    , memory ^>=0.18
    , monad-control ^>=1.0.3
    , monad-loops ^>=0.4.3
    , network-uri ^>=2.6.4
    , patrol ^>=1.0.0
    , QuickCheck ^>=2.14.2
    , random ^>=1.2.1
    , resource-pool ^>=0.4
    , say ^>=0.1.0
    , sqlite-simple ^>=0.4.18
    , stm ^>=2.5.1
    , tar ^>=0.5.1
    , temporary ^>=1.3
    , text ^>=2.0.1
    , time ^>=1.12.2
    , transformers ^>=0.6.1
    , uuid ^>=1.3.15
    , wai ^>=3.2.3
    , wai-extra ^>=3.1.13
    , warp ^>=3.3.23
    , witch ^>=1.2.0
    , zlib ^>=0.6.3

  default-extensions:
    AllowAmbiguousTypes
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeOperators

  exposed-modules:
    Monadoc
    Monadoc.Action.App.Log
    Monadoc.Action.App.Sql
    Monadoc.Action.Blob.Insert
    Monadoc.Action.Blob.Upsert
    Monadoc.Action.Component.Upsert
    Monadoc.Action.CronEntry.Delete
    Monadoc.Action.CronEntry.Enqueue
    Monadoc.Action.CronEntry.Insert
    Monadoc.Action.CronEntry.Prune
    Monadoc.Action.CronEntry.Update
    Monadoc.Action.CronEntry.Upsert
    Monadoc.Action.Database.Initialize
    Monadoc.Action.Database.Vacuum
    Monadoc.Action.Dependency.Upsert
    Monadoc.Action.Exception.Log
    Monadoc.Action.Exception.NotifySentry
    Monadoc.Action.HackageIndex.Insert
    Monadoc.Action.HackageIndex.Process
    Monadoc.Action.HackageIndex.Prune
    Monadoc.Action.HackageIndex.Update
    Monadoc.Action.HackageIndex.Upsert
    Monadoc.Action.HackageUser.Upsert
    Monadoc.Action.Job.Acquire
    Monadoc.Action.Job.Enqueue
    Monadoc.Action.Job.Perform
    Monadoc.Action.Job.Release
    Monadoc.Action.License.Upsert
    Monadoc.Action.Migration.Insert
    Monadoc.Action.Migration.Migrate
    Monadoc.Action.Module.Upsert
    Monadoc.Action.Package.Upsert
    Monadoc.Action.PackageMeta.Upsert
    Monadoc.Action.PackageMetaComponent.Upsert
    Monadoc.Action.PackageMetaComponentModule.Upsert
    Monadoc.Action.Preference.Upsert
    Monadoc.Action.Range.Upsert
    Monadoc.Action.Task.Perform
    Monadoc.Action.Upload.Process
    Monadoc.Action.Upload.Upsert
    Monadoc.Action.Version.Upsert
    Monadoc.Constant.ContentType
    Monadoc.Constant.CronEntry
    Monadoc.Constant.Header
    Monadoc.Constant.Migration
    Monadoc.Exception.Found
    Monadoc.Exception.InvalidDsn
    Monadoc.Exception.InvalidGenericPackageDescription
    Monadoc.Exception.InvalidOption
    Monadoc.Exception.MethodNotAllowed
    Monadoc.Exception.Mismatch
    Monadoc.Exception.MissingHeader
    Monadoc.Exception.MissingKey
    Monadoc.Exception.MissingSize
    Monadoc.Exception.NoNextMatch
    Monadoc.Exception.NotFound
    Monadoc.Exception.Sick
    Monadoc.Exception.Traced
    Monadoc.Exception.TrailingBytes
    Monadoc.Exception.UnexpectedArgument
    Monadoc.Exception.UnexpectedEntry
    Monadoc.Exception.UnknownOption
    Monadoc.Exception.UnknownRoute
    Monadoc.Extra.Aeson
    Monadoc.Extra.Cabal
    Monadoc.Extra.DirectSqlite
    Monadoc.Extra.Either
    Monadoc.Extra.Exception
    Monadoc.Extra.HttpClient
    Monadoc.Extra.List
    Monadoc.Extra.Maybe
    Monadoc.Extra.Read
    Monadoc.Extra.ResourcePool
    Monadoc.Extra.Time
    Monadoc.Factory
    Monadoc.Handler.AppleTouchIcon.Get
    Monadoc.Handler.Common
    Monadoc.Handler.Component.Get
    Monadoc.Handler.Favicon.Get
    Monadoc.Handler.HealthCheck.Get
    Monadoc.Handler.Home.Get
    Monadoc.Handler.Manifest.Get
    Monadoc.Handler.Module.Get
    Monadoc.Handler.Package.Get
    Monadoc.Handler.Proxy.Get
    Monadoc.Handler.Robots.Get
    Monadoc.Handler.Script.Get
    Monadoc.Handler.Search.Get
    Monadoc.Handler.Stylesheet.Get
    Monadoc.Handler.User.Get
    Monadoc.Handler.Version.Get
    Monadoc.Main.Executable
    Monadoc.Main.TestSuite
    Monadoc.Middleware.AddHeaders
    Monadoc.Middleware.CacheResponses
    Monadoc.Middleware.CompressResponses
    Monadoc.Middleware.HandleExceptions
    Monadoc.Middleware.LogResponses
    Monadoc.Model.Blob
    Monadoc.Model.Component
    Monadoc.Model.CronEntry
    Monadoc.Model.Dependency
    Monadoc.Model.HackageIndex
    Monadoc.Model.HackageUser
    Monadoc.Model.Job
    Monadoc.Model.License
    Monadoc.Model.Migration
    Monadoc.Model.Module
    Monadoc.Model.Package
    Monadoc.Model.PackageMeta
    Monadoc.Model.PackageMetaComponent
    Monadoc.Model.PackageMetaComponentModule
    Monadoc.Model.Preference
    Monadoc.Model.Range
    Monadoc.Model.Upload
    Monadoc.Model.Version
    Monadoc.Server.Application
    Monadoc.Server.Main
    Monadoc.Server.Middleware
    Monadoc.Template.Common
    Monadoc.Template.Component.Get
    Monadoc.Template.Home.Get
    Monadoc.Template.Module.Get
    Monadoc.Template.Package.Get
    Monadoc.Template.Search.Get
    Monadoc.Template.User.Get
    Monadoc.Template.Version.Get
    Monadoc.Test
    Monadoc.Type.App
    Monadoc.Type.Breadcrumb
    Monadoc.Type.BuildType
    Monadoc.Type.ComponentId
    Monadoc.Type.ComponentName
    Monadoc.Type.ComponentType
    Monadoc.Type.Config
    Monadoc.Type.Constraint
    Monadoc.Type.Context
    Monadoc.Type.Flag
    Monadoc.Type.Guid
    Monadoc.Type.HackageUserName
    Monadoc.Type.Handler
    Monadoc.Type.Hash
    Monadoc.Type.Icon
    Monadoc.Type.Key
    Monadoc.Type.Manifest
    Monadoc.Type.Model
    Monadoc.Type.ModuleName
    Monadoc.Type.ModuleType
    Monadoc.Type.PackageName
    Monadoc.Type.Port
    Monadoc.Type.Query
    Monadoc.Type.Reversion
    Monadoc.Type.Revision
    Monadoc.Type.Route
    Monadoc.Type.Schedule
    Monadoc.Type.Search
    Monadoc.Type.Severity
    Monadoc.Type.Spdx
    Monadoc.Type.Status
    Monadoc.Type.Task
    Monadoc.Type.Timestamp
    Monadoc.Type.Url
    Monadoc.Type.VersionNumber
    Monadoc.Worker.Main

  hs-source-dirs:     source/library
  other-modules:
    Monadoc.Action.Blob.InsertSpec
    Monadoc.Action.Blob.UpsertSpec
    Monadoc.Action.Component.UpsertSpec
    Monadoc.Action.CronEntry.DeleteSpec
    Monadoc.Action.CronEntry.EnqueueSpec
    Monadoc.Action.CronEntry.InsertSpec
    Monadoc.Action.CronEntry.PruneSpec
    Monadoc.Action.CronEntry.UpdateSpec
    Monadoc.Action.CronEntry.UpsertSpec
    Monadoc.Action.Database.InitializeSpec
    Monadoc.Action.Database.VacuumSpec
    Monadoc.Action.Dependency.UpsertSpec
    Monadoc.Action.HackageUser.UpsertSpec
    Monadoc.Action.Job.EnqueueSpec
    Monadoc.Action.License.UpsertSpec
    Monadoc.Action.Module.UpsertSpec
    Monadoc.Action.Package.UpsertSpec
    Monadoc.Action.PackageMeta.UpsertSpec
    Monadoc.Action.PackageMetaComponent.UpsertSpec
    Monadoc.Action.PackageMetaComponentModule.UpsertSpec
    Monadoc.Action.Preference.UpsertSpec
    Monadoc.Action.Range.UpsertSpec
    Monadoc.Action.Upload.UpsertSpec
    Monadoc.Action.Version.UpsertSpec
    Monadoc.Extra.DirectSqliteSpec
    Monadoc.Extra.EitherSpec
    Monadoc.Extra.HttpClientSpec
    Monadoc.Extra.ListSpec
    Monadoc.Extra.MaybeSpec
    Monadoc.Extra.TimeSpec
    Monadoc.Model.BlobSpec
    Monadoc.Model.ComponentSpec
    Monadoc.Model.CronEntrySpec
    Monadoc.Model.DependencySpec
    Monadoc.Model.HackageIndexSpec
    Monadoc.Model.HackageUserSpec
    Monadoc.Model.JobSpec
    Monadoc.Model.LicenseSpec
    Monadoc.Model.MigrationSpec
    Monadoc.Model.ModuleSpec
    Monadoc.Model.PackageMetaComponentModuleSpec
    Monadoc.Model.PackageMetaComponentSpec
    Monadoc.Model.PackageMetaSpec
    Monadoc.Model.PackageSpec
    Monadoc.Model.PreferenceSpec
    Monadoc.Model.RangeSpec
    Monadoc.Model.UploadSpec
    Monadoc.Model.VersionSpec
    Monadoc.Type.BuildTypeSpec
    Monadoc.Type.ComponentIdSpec
    Monadoc.Type.ComponentNameSpec
    Monadoc.Type.ComponentTypeSpec
    Monadoc.Type.ConfigSpec
    Monadoc.Type.ConstraintSpec
    Monadoc.Type.FlagSpec
    Monadoc.Type.GuidSpec
    Monadoc.Type.HackageUserNameSpec
    Monadoc.Type.HashSpec
    Monadoc.Type.KeySpec
    Monadoc.Type.ModelSpec
    Monadoc.Type.ModuleNameSpec
    Monadoc.Type.ModuleTypeSpec
    Monadoc.Type.PackageNameSpec
    Monadoc.Type.PortSpec
    Monadoc.Type.ReversionSpec
    Monadoc.Type.RevisionSpec
    Monadoc.Type.RouteSpec
    Monadoc.Type.ScheduleSpec
    Monadoc.Type.SeveritySpec
    Monadoc.Type.SpdxSpec
    Monadoc.Type.StatusSpec
    Monadoc.Type.TaskSpec
    Monadoc.Type.TimestampSpec
    Monadoc.Type.UrlSpec
    Monadoc.Type.VersionNumberSpec
    MonadocSpec
    Paths_monadoc

executable monadoc
  import:         executable
  hs-source-dirs: source/executable
  main-is:        Main.hs

test-suite monadoc-test-suite
  import:         executable
  hs-source-dirs: source/test-suite
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
